Revert/Remove feature: Allow/Disallow YourData service domain to be mixed with other service domains (including service with no domain) in request
