# main-server/src/tendermint/ndid.js
@@ -2283,51 +2283,3 @@ export async function getYourDataErrorCodeList(type) {
     });
   }
 }
-
-export async function allowYourDataServiceToBeMixedInRequest(
-  params,
-  nodeId,
-  callbackFnName,
-  callbackAdditionalArgs,
-  saveForRetryOnChainDisabled
-) {
-  try {
-    await tendermint.transact({
-      nodeId,
-      fnName: 'AllowYourDataServiceToBeMixedInRequest',
-      params: {},
-      callbackFnName,
-      callbackAdditionalArgs,
-      saveForRetryOnChainDisabled,
-    });
-  } catch (error) {
-    throw new CustomError({
-      message: 'Cannot allow YourData service to be mixed in request',
-      cause: error,
-    });
-  }
-}
-
-export async function disallowYourDataServiceToBeMixedInRequest(
-  params,
-  nodeId,
-  callbackFnName,
-  callbackAdditionalArgs,
-  saveForRetryOnChainDisabled
-) {
-  try {
-    await tendermint.transact({
-      nodeId,
-      fnName: 'DisallowYourDataServiceToBeMixedInRequest',
-      params: {},
-      callbackFnName,
-      callbackAdditionalArgs,
-      saveForRetryOnChainDisabled,
-    });
-  } catch (error) {
-    throw new CustomError({
-      message: 'Cannot disallow YourData service to be mixed in request',
-      cause: error,
-    });
-  }
-}
